tests/should_fail/match_int_two_literals_non_exhaust.nv
module fail
// Non-exhaustive: single int literal, no wildcard
let n = 42
let r = match n {
    0 => "zero",
    1 => "one",
}
